@@ -1,30 +1,29 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
-    kotlin("jvm") version "1.6.21" apply false
-    kotlin("plugin.serialization") version "1.6.21" apply false
-    id("org.jmailen.kotlinter") version "3.10.0" apply false
-    id("com.github.ben-manes.versions") version "0.42.0"
+    kotlin("jvm") version "1.8.0" apply false
+    kotlin("plugin.serialization") version "1.8.0" apply false
+    id("org.jmailen.kotlinter") version "3.13.0" apply false
+    id("com.github.ben-manes.versions") version "0.44.0"
     id("co.uzzu.dotenv.gradle") version "2.0.0"
 }
 subprojects {
     group = "com.github.cs124-illinois.playground"
-    version = "2022.4.1"
+    version = "2023.1.0"
     tasks.withType<KotlinCompile> {
         kotlinOptions {
-            jvmTarget = JavaVersion.VERSION_16.toString()
+            jvmTarget = JavaVersion.VERSION_17.toString()
         }
     }
     tasks.withType<Test> {
         useJUnitPlatform()
-        jvmArgs("-ea", "-Xmx1G", "-Xss256k", "--illegal-access=permit")
+        jvmArgs("-ea", "-Xmx1G", "-Xss256k")
     }
 }
 allprojects {
     repositories {
         mavenCentral()
         maven("https://jitpack.io")
-        maven("https://dl.bintray.com/jetbrains/markdown")
     }
     tasks.withType<Test> {
         enableAssertions = true
